include code/commands/file-tasks/Makefile.am

gobby_0_5_SOURCES += \
	code/commands/application-commands.cpp \
	code/commands/auth-commands.cpp \
	code/commands/autosave-commands.cpp \
	code/commands/browser-commands.cpp \
	code/commands/browser-context-commands.cpp \
	code/commands/edit-commands.cpp \
	code/commands/file-commands.cpp \
	code/commands/folder-commands.cpp \
	code/commands/help-commands.cpp \
	code/commands/subscription-commands.cpp \
	code/commands/synchronization-commands.cpp \
	code/commands/user-join-commands.cpp \
	code/commands/view-commands.cpp

noinst_HEADERS += \
	code/commands/application-commands.hpp \
	code/commands/auth-commands.hpp \
	code/commands/autosave-commands.hpp \
	code/commands/browser-commands.hpp \
	code/commands/browser-context-commands.hpp \
	code/commands/edit-commands.hpp \
	code/commands/file-commands.hpp \
	code/commands/folder-commands.hpp \
	code/commands/help-commands.hpp \
	code/commands/subscription-commands.hpp \
	code/commands/synchronization-commands.hpp \
	code/commands/user-join-commands.hpp \
	code/commands/view-commands.hpp
