noinst_LIBRARIES = libgobby-core.a

libgobby_core_a_SOURCES = \
	browser.cpp \
	certificatemanager.cpp \
	chatsessionview.cpp \
	chattablabel.cpp \
	closableframe.cpp \
	connectionmanager.cpp \
	credentialsgenerator.cpp \
	documentinfostorage.cpp \
	filechooser.cpp \
	folder.cpp \
	foldermanager.cpp \
	header.cpp \
	huebutton.cpp \
	nodewatch.cpp \
	noteplugin.cpp \
	preferences.cpp \
	selfhoster.cpp \
	server.cpp \
	sessionuserview.cpp \
	sessionview.cpp \
	statusbar.cpp \
	tablabel.cpp \
	textsessionuserview.cpp \
	textsessionview.cpp \
	textundogrouping.cpp \
	texttablabel.cpp \
	titlebar.cpp \
	userjoin.cpp \
	userlist.cpp

noinst_HEADERS = \
        browser.hpp \
	certificatemanager.hpp \
	chatsessionview.hpp \
	chattablabel.hpp \
        closableframe.hpp \
	connectionmanager.hpp \
	credentialsgenerator.hpp \
        documentinfostorage.hpp \
        filechooser.hpp \
        folder.hpp \
        foldermanager.hpp \
        header.hpp \
        huebutton.hpp \
        nodewatch.hpp \
        noteplugin.hpp \
        preferences.hpp \
	selfhoster.hpp \
	server.hpp \
	sessionuserview.hpp \
	sessionview.hpp \
        statusbar.hpp \
	tablabel.hpp \
        textsessionuserview.hpp \
        textsessionview.hpp \
	textundogrouping.hpp \
	texttablabel.hpp \
	titlebar.hpp \
	userjoin.hpp \
        userlist.hpp

appicondir = $(datadir)/pixmaps
pixmapdir = $(datadir)/pixmaps/gobby-0.5

AM_CPPFLAGS = $(gobby_CFLAGS) $(infinote_CFLAGS) \
              -I$(top_srcdir)/code
