include code/core/gobject/Makefile.am

gobby_0_5_SOURCES += \
	code/core/applicationactions.cpp \
	code/core/browser.cpp \
	code/core/certificatemanager.cpp \
	code/core/chatsessionview.cpp \
	code/core/chattablabel.cpp \
	code/core/closableframe.cpp \
	code/core/connectionmanager.cpp \
	code/core/credentialsgenerator.cpp \
	code/core/documentinfostorage.cpp \
	code/core/filechooser.cpp \
	code/core/folder.cpp \
	code/core/foldermanager.cpp \
	code/core/huebutton.cpp \
	code/core/knownhoststorage.cpp \
	code/core/menumanager.cpp \
	code/core/nodewatch.cpp \
	code/core/noteplugin.cpp \
	code/core/preferences.cpp \
	code/core/selfhoster.cpp \
	code/core/server.cpp \
	code/core/sessionuserview.cpp \
	code/core/sessionview.cpp \
	code/core/statusbar.cpp \
	code/core/tablabel.cpp \
	code/core/textsessionuserview.cpp \
	code/core/textsessionview.cpp \
	code/core/textundogrouping.cpp \
	code/core/texttablabel.cpp \
	code/core/titlebar.cpp \
	code/core/toolbar.cpp \
	code/core/userjoin.cpp \
	code/core/userlist.cpp \
	code/core/windowactions.cpp

noinst_HEADERS += \
	code/core/applicationactions.hpp \
	code/core/browser.hpp \
	code/core/certificatemanager.hpp \
	code/core/chatsessionview.hpp \
	code/core/chattablabel.hpp \
	code/core/closableframe.hpp \
	code/core/connectionmanager.hpp \
	code/core/credentialsgenerator.hpp \
	code/core/documentinfostorage.hpp \
	code/core/filechooser.hpp \
	code/core/folder.hpp \
	code/core/foldermanager.hpp \
	code/core/menumanager.hpp \
	code/core/huebutton.hpp \
	code/core/knownhoststorage.hpp \
	code/core/nodewatch.hpp \
	code/core/noteplugin.hpp \
	code/core/preferences.hpp \
	code/core/selfhoster.hpp \
	code/core/server.hpp \
	code/core/sessionuserview.hpp \
	code/core/sessionview.hpp \
	code/core/statusbar.hpp \
	code/core/tablabel.hpp \
	code/core/textsessionuserview.hpp \
	code/core/textsessionview.hpp \
	code/core/textundogrouping.hpp \
	code/core/texttablabel.hpp \
	code/core/titlebar.hpp \
	code/core/toolbar.hpp \
	code/core/userjoin.hpp \
	code/core/userlist.hpp \
	code/core/windowactions.hpp
