gobby_0_5_SOURCES += \
	code/dialogs/connection-dialog.cpp \
	code/dialogs/connection-info-dialog.cpp \
	code/dialogs/document-location-dialog.cpp \
	code/dialogs/entry-dialog.cpp \
	code/dialogs/find-dialog.cpp \
	code/dialogs/goto-dialog.cpp \
	code/dialogs/initial-dialog.cpp \
	code/dialogs/open-location-dialog.cpp \
	code/dialogs/password-dialog.cpp \
	code/dialogs/preferences-dialog.cpp

noinst_HEADERS += \
	code/dialogs/connection-dialog.hpp \
	code/dialogs/connection-info-dialog.hpp \
	code/dialogs/document-location-dialog.hpp \
	code/dialogs/entry-dialog.hpp \
	code/dialogs/find-dialog.hpp \
	code/dialogs/goto-dialog.hpp \
	code/dialogs/initial-dialog.hpp \
	code/dialogs/open-location-dialog.hpp \
	code/dialogs/password-dialog.hpp \
	code/dialogs/preferences-dialog.hpp
