gobby_0_5_SOURCES += \
	code/operations/operations.cpp \
	code/operations/operation-delete.cpp \
	code/operations/operation-export-html.cpp \
	code/operations/operation-new.cpp \
	code/operations/operation-open.cpp \
	code/operations/operation-open-multiple.cpp \
	code/operations/operation-save.cpp \
	code/operations/operation-subscribe-path.cpp

noinst_HEADERS += \
	code/operations/operations.hpp \
	code/operations/operation-delete.hpp \
	code/operations/operation-export-html.hpp \
	code/operations/operation-new.hpp \
	code/operations/operation-open.hpp \
	code/operations/operation-open-multiple.hpp \
	code/operations/operation-save.hpp \
	code/operations/operation-subscribe-path.hpp
