gobby_0_5_SOURCES += \
	code/util/asyncoperation.cpp \
	code/util/closebutton.cpp \
	code/util/config.cpp \
	code/util/file.cpp \
	code/util/historyentry.cpp \
	code/util/i18n.cpp \
	code/util/serialize.cpp \
	code/util/uri.cpp

noinst_HEADERS += \
	code/util/asyncoperation.hpp \
	code/util/closebutton.hpp \
	code/util/config.hpp \
	code/util/defaultaccumulator.hpp \
	code/util/file.hpp \
	code/util/historyentry.hpp \
	code/util/i18n.hpp \
	code/util/serialize.hpp \
	code/util/uri.hpp
