noinst_LIBRARIES = libgobby-dialogs.a

libgobby_dialogs_a_SOURCES = \
	documentlocationdialog.cpp \
	entrydialog.cpp \
	finddialog.cpp \
	gotodialog.cpp \
	initialdialog.cpp \
	preferencesdialog.cpp

libgobby_dialogs_a_CPPFLAGS = $(gobby_CFLAGS) -I../../inc/ \
                              -DAPPICON_DIR=\""$(appicondir)"\" \
                              -DPIXMAPS_DIR=\""$(pixmapdir)"\"
