noinst_LIBRARIES = libgobby-util.a

libgobby_util_a_SOURCES = \
	closebutton.cpp \
	color.cpp \
	config.cpp \
	file.cpp \
	i18n.cpp \
	resolv.cpp \
	serialize.cpp

libgobby_util_a_CPPFLAGS = $(gobby_CFLAGS) -I../../inc/ \
                          -DAPPICON_DIR=\""$(appicondir)"\" \
                          -DPIXMAPS_DIR=\""$(pixmapdir)"\"
