gobby_0_5_SOURCES += \
	code/commands/file-tasks/task-export-html.cpp \
	code/commands/file-tasks/task-new.cpp \
	code/commands/file-tasks/task-open.cpp \
	code/commands/file-tasks/task-open-file.cpp \
	code/commands/file-tasks/task-open-location.cpp \
	code/commands/file-tasks/task-open-multiple.cpp \
	code/commands/file-tasks/task-save.cpp \
	code/commands/file-tasks/task-save-all.cpp

noinst_HEADERS += \
	code/commands/file-tasks/task-export-html.hpp \
	code/commands/file-tasks/task-new.hpp \
	code/commands/file-tasks/task-open.hpp \
	code/commands/file-tasks/task-open-file.hpp \
	code/commands/file-tasks/task-open-location.hpp \
	code/commands/file-tasks/task-open-multiple.hpp \
	code/commands/file-tasks/task-save.hpp \
	code/commands/file-tasks/task-save-all.hpp
